  ~magit-commit-autofixup~.  bfadd41079

- ~magit-stash-index~ did not use ~magit-stash-read-message-function~.
  #5295

- Fixed an error that occured when creating ~magit-hunk-section-map~
  and the user has disabled ~smerge-command-prefix~.  The same bug
  exists in Emacs since 29.1, so this will only help users stuck
  on Emacs 28.  #5300

* v4.2.0    2025-01-01

- At least Git 2.25.0 is required now.  033a0c0cdc

- At least Emacs 27.1 is required now.  c1a86066e8

- Added new command ~magit-toggle-profiling~.  f637dd1877

- Added new command ~magit-toggle-subprocess-record~.  ec1f403af1

Bug fixes:

- Fixed a regression in ~transient-init-value~.  5b4c4aea1b

- Fixed setting ~fill-paragraph-function~ in
  ~git-commit-setup-changelog-support~.  139e0fcff3

- ~magit-log-refresh~ lacked the ~--since~ and ~--until~ arguments, which
  were already available in ~magit-log~.  3ecebe8d11

- Enabling verbose output in ~magit-commit-absorb~ caused an error.
  #5272

- In logs, no longer strip ~heads/~ prefix from branch names if a tag
  with the same name exists.  5cb3492464

- ~magit-list-special-refnames~ returned nonsense.  #5277

* v4.1.3    2024-12-06

- For most important sections, if an error occurs while inserting the
  section, the error message is now displayed in the section body.
  #5255

- ~magit-submodule-populate~ now supports ~--recursive~.  #5191 #5256

- Improved ~magit-process-password-prompt-regexps~.  #5257

Bug fixes:

- ~magit-stash-pop~ and ~magit-stash-apply~ sometimes installed conflicts
  for the user to resolve that are more complicated than they need to
  be.  #5253

- ~magit-stash-push~ placed ~--~ before other arguments.  #5260

- ~magit-autorevert~ failed to require ~magit-process~.  #5263

* v4.1.2    2024-11-02

- Add various minor process logging improvements:
  5b30c05d3a magit--git-insert: Collapse process section if appropriate
  b11524120e magit--git-insert: Optionally always log to process buffer